5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4366/executions/1596_1015.log
== TEST (2019-03-26 18:46:00) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
print(min(a,b,c))
print(max(a,b,c))

-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:46:18) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
print(min(a,b,c))
print(max(a,b,c))

-- OUTPUT:
-2
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:46:33) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
print(min(a,b,c))
print(max(a,b,c))

-- EXECUTION TIME:
0.153827
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:48:25) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c(min-max))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(a+b+c(min-max))
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:01) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c(menor-maior))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(a+b+c(menor-maior))
NameError: name 'menor' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:03) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c(menor-maior))

-- EXECUTION TIME:
0.302673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 6, in <module>
    print(a+b+c(menor-maior))
NameError: name 'menor' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:49:56) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c,min-max)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(a+b+c,min-max)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:49:59) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c,min-max)

-- EXECUTION TIME:
0.148489
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1596/1015/main.py", line 6, in <module>
    print(a+b+c,min-max)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:50:14) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:50:16) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)


-- EXECUTION TIME:
0.173279
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:51:49) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print((a+b+c)min-max)

-- ERROR:
File "XXXX", line 6
    print((a+b+c)min-max)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:52:16) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)

-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:52:43) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)

-- EXECUTION TIME:
0.157622
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:53:03) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)
print(min-max)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(min-max)
TypeError: unsupported operand type(s) for -: 'builtin_function_or_method' and 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:53:44) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)
print(a-c)

-- OUTPUT:
8
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:55:00) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)
print(c-a)

-- OUTPUT:
8
-10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:55:10) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)
print(c-a)

-- EXECUTION TIME:
0.194292
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
8
-10
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:55:32) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)
print(c-a)

-- OUTPUT:
8
-10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:33:54) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:34:11) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)


-- EXECUTION TIME:
0.194157
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:34:14) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print(a+b+c)


-- OUTPUT:
8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:35:24) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print("soma_dos_tres_valores:")
print("subtracao_do_menor_valor_e_o_maior_valor")


-- OUTPUT:
soma_dos_tres_valores:
subtracao_do_menor_valor_e_o_maior_valor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:35:41) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print("soma_dos_tres_valores:")
print("subtracao_do_menor_valor_e_o_maior_valor")


-- EXECUTION TIME:
0.297038
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
soma_dos_tres_valores:
subtracao_do_menor_valor_e_o_maior_valor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:35:44) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print("soma_dos_tres_valores:")
print("subtracao_do_menor_valor_e_o_maior_valor")


-- OUTPUT:
soma_dos_tres_valores:
subtracao_do_menor_valor_e_o_maior_valor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:35:46) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print("soma_dos_tres_valores:")
print("subtracao_do_menor_valor_e_o_maior_valor")


-- EXECUTION TIME:
0.124134
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
soma_dos_tres_valores:
subtracao_do_menor_valor_e_o_maior_valor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 19:40:51) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print("soma_dos_tres_valores:")
print("subtracao_do_menor_valor_e_o_maior_valor")


-- OUTPUT:
soma_dos_tres_valores:
subtracao_do_menor_valor_e_o_maior_valor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 19:40:52) 
-- CODE:
a=int(input("valor de a:"))
b=int(input("valor de b:"))
c=int(input("valor de c:"))
min(a,b,c)
max(a,b,c)
print("soma_dos_tres_valores:")
print("subtracao_do_menor_valor_e_o_maior_valor")


-- EXECUTION TIME:
0.187494
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
soma_dos_tres_valores:
subtracao_do_menor_valor_e_o_maior_valor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 00:02:30) 
-- CODE:
var1 = int(input("Digite 1 numero: "))
var2 = int(input("Digite 1 numero: "))
var3 = int(input("Digite 1 numero: "))
print(min(var1, var2, var3))
print((var1+var2+var3) - max(var1, var2, var3) - min(var1, var2, var3))
print(max(var1, var2, var3))



-- EXECUTION TIME:
0.147277
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2
0
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
